config swagger
