# server/src/routes/document.js
@@ -17,7 +17,6 @@ const storage = multer.diskStorage({
 const upload = multer({ 
     storage: storage,
     fileFilter: function (req, file, cb) {
-        console.log(file.originalname)
         const dot = path.extname(file.originalname);
         if (dot !== ".pdf" && dot !== ".doc" && dot !== ".docx") {
           return cb(null, false, new Error('just pdf, doc, docx'));
@@ -32,6 +31,7 @@ const {checkAdmin} = require('../middleware/authMiddleware');
 router.all('*', passport.authenticate("jwt", { session: false }));
 router.get('/all', checkAdmin, documentController.getAllDocument);
 router.get('/:id', documentController.getDocumentByDocId);
+router.get('/trash', checkAdmin, documentController.trashDocument);
 router.get('/', documentController.getAllDocumentsByUser); // check
 router.post('/', checkAdmin, upload.single('file'), documentController.createDocument); //(check)
 router.put('/:id', checkAdmin, upload.single('file'), documentController.updateDocument); //check
