# server/src/swagger.json
@@ -29,6 +29,19 @@
     "https",
     "http"
   ],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/auth/admin": {
       "post": {
@@ -37,26 +50,23 @@
         ],
         "summary": "Login with username and password",
         "description": "/api/v1/auth/admin",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
-            "in": "body",
+            "name": "x-forwarded-for",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
-            "description": "add username and password",
-            "required": true,
+            "in": "body",
             "schema": {
-              "type":"object",
+              "type": "object",
               "properties": {
-                "username":{
-                  "type":"string"
+                "username": {
+                  "example": "any"
                 },
-                "password":{
-                  "type":"string"
+                "password": {
+                  "example": "any"
                 }
               }
             }
@@ -64,30 +74,19 @@
         ],
         "responses": {
           "200": {
-            "schema": {
-              "type":"object",
-              "properties": {
-                "msg":{
-                  "type":"string"
-                },
-                "name":{
-                  "type":"string"
-                },
-                "token":{
-                  "type":"string"
-                }
-              }
-            }
+            "description": "OK"
           },
-          "400": {
-            "schema": {
-              "type":"object",
-              "properties": {
-                "msg":{
-                  "type":"string"
-                }
-              }
-            }
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "429": {
+            "description": "Too Many Requests"
           }
         }
       }
@@ -159,53 +158,43 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [],
-        "query":[],
+        "parameters": [
+          {
+            "name": "perPage",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "documents": {
-                  "type": "array",
-                  "items":{
-                    "type":"object",
-                    "properties": {
-                      "docId": {
-                        "type": "string"
-                      },
-                      "title": {
-                        "type": "string"
-                      },
-                      "url": {
-                        "type": "string"
-                      },
-                      "updateAt": {
-                        "type": "string"
-                      },
-                      "status": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                },
-                "current": {
-                  "type": "integer"
-                },
-                "pages": {
-                  "type": "integer"
-                }
-              }
-            }
-          }, 
+            "description": "OK"
+          },
           "400": {
-            "description": "somethings went wrong"
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           }
         },
         "security": [
           {
-            "bearer Token": []
+            "Bearer": []
           }
         ]
       }
@@ -217,57 +206,37 @@
         ],
         "summary": "Returns all document by userId",
         "description": "Returns a map of document",
-        "operationId": "getInventory",
-        "produces": [
-          "application/json"
+        "parameters": [
+          {
+            "name": "perPage",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "type": "string"
+          }
         ],
-        "parameters": [],
-        "query":[],
         "responses": {
           "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "documents": {
-                  "type": "array",
-                  "items":{
-                    "type":"object",
-                    "properties": {
-                      "docId": {
-                        "type": "string"
-                      },
-                      "title": {
-                        "type": "string"
-                      },
-                      "url": {
-                        "type": "string"
-                      },
-                      "updateAt": {
-                        "type": "string"
-                      },
-                      "status": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                },
-                "current": {
-                  "type": "integer"
-                },
-                "pages": {
-                  "type": "integer"
-                }
-              }
-            }
-          }, 
-          "400": {
-            "description": "somethings went wrong"
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
           {
-            "bearer Token": []
+            "Bearer": []
           }
         ]
       }
@@ -278,16 +247,11 @@
           "document"
         ],
         "summary": "Create new document",
-        "description": "",
-        "operationId": "placeOrder",
-        "produces": [
-          "application/json"
-        ],
+        "description": "api/v1/document",
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "description": "order placed for purchasing the pet",
             "required": true,
             "schema": {
               "type": "object",
@@ -305,26 +269,18 @@
         ],
         "responses": {
           "200": {
-            "description": "create success",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "msg": {
-                  "type":"string"
-                },
-                "docId":{
-                  "type":"string"
-                }
-              }
-            }
+            "description": "OK"
           },
-          "400": {
-            "description": "Can't create document, please try later"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
           {
-            "bearer Token": []
+            "Bearer": []
           }
         ]
       }
@@ -354,21 +310,18 @@
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Order"
-            }
+            "description": "OK"
           },
-          "400": {
-            "description": "Invalid ID supplied"
+          "401": {
+            "description": "Unauthorized"
           },
-          "404": {
-            "description": "Order not found"
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
           {
-            "bearer Token": []
+            "Bearer": []
           }
         ]
       },
@@ -396,21 +349,18 @@
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Order"
-            }
+            "description": "OK"
           },
-          "400": {
-            "description": "Invalid ID supplied"
+          "401": {
+            "description": "Unauthorized"
           },
-          "404": {
-            "description": "Order not found"
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
           {
-            "bearer Token": []
+            "Bearer": []
           }
         ]
       },
@@ -418,13 +368,8 @@
         "tags": [
           "document"
         ],
-        "summary": "Delete purchase order by ID",
-        "description": "For valid response try integer IDs with positive integer value.         Negative or non-integer values will generate API errors",
-        "operationId": "deleteOrder",
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
+        "summary": "Delete document",
+        "description": "api/v1/document/:id",
         "parameters": [
           {
             "name": "orderId",
@@ -437,16 +382,69 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "Invalid ID supplied"
+          "200": {
+            "description": "OK"
           },
-          "404": {
-            "description": "Order not found"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
           {
-            "bearer Token": []
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/document/trash": {
+      "get": {
+        "tags": [
+          "document"
+        ],
+        "summary": "get document deleted",
+        "description": "/api/v1/document/trash",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/document/:id/restore": {
+      "patch": {
+        "tags": [
+          "document"
+        ],
+        "summary": "restore document",
+        "description": "/api/v1/document/:id/restore",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
           }
         ]
       }
@@ -467,7 +465,12 @@
           "400": {
             "description": "Invalid username"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
     "/user/all": {
@@ -492,7 +495,12 @@
           "400": {
             "description": "Invalid users"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
     "/user/:docId?perPage=5&page=1&active=true/false": {
@@ -539,7 +547,12 @@
           "400": {
             "description": "can't exec data"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
     "/confirm": {
@@ -601,7 +614,12 @@
             },
             "description": "failure"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       },
       "put": {
         "tags": [
@@ -635,7 +653,12 @@
           "200": {
             "description": "successful"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
     "/confirm/:id": {
@@ -668,24 +691,13 @@
           "default": {
             "description": "successful operation"
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
-    }
-  },
-  "securityDefinitions": {
-    "petstore_auth": {
-      "type": "oauth2",
-      "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-      "flow": "implicit",
-      "scopes": {
-        "write:pets": "modify pets in your account",
-        "read:pets": "read your pets"
-      }
-    },
-    "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
-      "in": "header"
     }
   },
   "definitions": {
